syntax = "proto3";

option go_package = "./;proto";

message CallRequest{
  string name = 1;
}
message CallResponse{
  string message = 2;
}

service Example{
  rpc Call (CallRequest) returns (CallResponse){};
}

message EmptyRequest{}

message EmptyResponse{}

service Foo{
  rpc Bar (EmptyRequest) returns (EmptyResponse){};
}